--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.2.63",
     "@types/react-dom": "^18.2.20",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
     "react-scripts": "5.0.1",
